@@ -6,6 +6,7 @@ Version 4.0.6 (02-25-12)
 -Additional margin fix for HTML tables.
 -Updated Foundation CSS.
 -Adjusted doctype. 
+-Removed legacy icon margin option.
 
 Version 4.0.5 (02-23-12)
 -Fix for HTML tables.
